--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Grogu.jpg" alt="Mohit Profile Picture"></td>
+      <td><img src="images/Grogu.jpg" alt="Mohit Profile Picture"></td>
       <td>
         <h1>Mohit Saini</h1>
         <p><em>Major in <strong><a href="https://en.wikipedia.org/wiki/English_studies#:~:text=Dalit%20Writings-,English%20major,texts%20in%20the%20English%20language.">English</a></strong>.</em></p>
